Implement API support for zone IP restrictions
