# app/lib/api/definitions/restriction.py
@@ -1,0 +1,6 @@
+class Restriction:
+    def __init__(self):
+        self.id = 0
+        self.ip = ''
+        self.type = ''
+        self.enabled = False
